--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "italy = co # 'Italy'\n",
+    "italy = countries[] # 'Italy'\n",
     "italy"
    ]
   },
