Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,8 @@
    "source": [
     "countries.append('Thailand')\n",
     "countries\n",
-    "\n"
+    "\n",
+    "del countries[-1]"
    ]
   },
   {
