--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries['New Mexico'] # add code here"
    ]
   },
   {
