Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,8 @@
    },
    "outputs": [],
    "source": [
-    "countries['New Mexico'] # add code here"
+    "countries['New Mexico'] = 'USA'\n",
+    "countrie# add code here"
    ]
   },
   {
