Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.pop() # 'Thailand'"
+    "countries.pop('Thailand') # 'Thailand'"
    ]
   },
   {
