--- a/index.ipynb
+++ b/index.ipynb
@@ -361,11 +361,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Thailand'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "countries.pop('Thailand') # 'Thailand'"
+    "countries.pop() # 'Thailand'"
    ]
   },
   {
