--- a/index.ipynb
+++ b/index.ipynb
@@ -381,9 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'USA', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea', 'Malta']\n"
+     ]
+    }
+   ],
    "source": [
     "print(countries)"
    ]
