Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,8 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = "
+    "unique_countries = set(Countries)\n",
+    "unique"
    ]
   },
   {
